[project]
name = "muniuliuma"
version = "0.0.1"
description = "木牛流马 — 工程行业 AI 技能工具箱"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
docx = ["python-docx>=0.8.11"]
xlsx = ["openpyxl>=3.0"]
pdf = ["pdfplumber>=0.9.0"]
full = ["python-docx>=0.8.11", "openpyxl>=3.0", "pdfplumber>=0.9.0"]

[project.scripts]
muniuliuma-mcp = "mcp_server:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
