[project]
name = "muniuliuma"
version = "0.0.2"
description = "木牛流马 — 工程行业 AI 技能工具箱，30 个 MCP 工具，5 大模块"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Windows COM 自动化：完美保留格式（仅 Windows，推荐安装）
win32 = ["pywin32>=306"]
# 回退模式：非 Windows 环境也可用
docx = ["python-docx>=0.8.11"]
xlsx = ["openpyxl>=3.0"]
pdf = ["pdfplumber>=0.9.0"]
# 跨平台全量安装（Windows 用户建议加 win32: pip install -e ".[full,win32]"）
full = ["python-docx>=0.8.11", "openpyxl>=3.0", "pdfplumber>=0.9.0"]

[project.scripts]
muniuliuma-mcp = "mcp_server:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
